# DeepResearch

./: AGENTS.md  claude.md  pyproject.toml
Agent/: claude.md
WebAgent/: claude.md
WebAgent/WebSailor/src/: react_agent.py
evaluation/: claude.md
examples/: README.md  langgraph_executor_demo.py  simple_usage_example.py  with_langchain.py
inference/: claude.md  deepresearch_node.py  langgraph_executor.py  react_agent.py  tool_file.py  tool_visit.py
inference/file_tools/: file_parser.py
refactor/: main.py
refactor/tests/tongyi_ds/: test_langgraph_agent.py  test_tool_visit.py
refactor/tongyi_ds/: __init__.py  config.py  constants.py  finalize_node.py  graph.py  llm_client.py  llm_node.py  result.py  state.py  tool_node.py  tool_runtime.py  utils.py
refactor/tongyi_ds/prompts/: __init__.py
refactor/tongyi_ds/tools/: __init__.py  tool_crawl.py  tool_scholar.py  tool_search.py  tool_visit.py
refactor/tools/: tool_scholar.py
tests/: README.md  run_tests.py  test_tool_config.py  test_tools.py
todo/: task_01_req.md
tongyi-ds/: react_agent.py
tongyi-ds/tools/: tool_visit.py
