[project]
name = "deepresearch"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langchain-openai>=0.3.33",
    "langchain-tavily>=0.2.11",
    "langgraph>=0.6.7",
    "python-dotenv>=1.1.1",
    "requests>=2.32.5",
    "sandbox-fusion>=0.3.7",
    "transformers>=4.56.2",
]
